# attcon

./: .gitignore  FEEDBACK.md  NEXT_STEPS.md  PREPRINT.md  PRIORITY1_AUDIT_STATUS.md  README.md  ROADMAP.md  pyproject.toml
audits/: cross_architecture_rnn_summary.json  perturbational_multiseed.json  perturbational_multiseed_with_rnn.json  post_rehab_full_eval_tune_prob_035_summary.json  post_stage4b_full_eval_tune_prob_035_summary.json  priority1_smoke_tune_prob_035.json  stage4b_emergence_tune_prob_035.json  stage7_external_llm_multislice_tiny_tune_prob_035.json  stage7_external_llm_tiny_tune_prob_035.json  stage7_latent_followup_content_memory.json  stage7_latent_followup_content_memory_v2.json  stage7_latent_followup_content_memory_v3.json  stage7_latent_followup_longer_wide.json  stage7_latent_followup_tune_prob_035.json  stage7_latent_noise_floor_content_memory_v3.json  stage7_latent_noise_floor_v3_seed107.json  stage7_latent_noise_floor_v3_seed207.json  stage7_latent_noise_floor_v3_seed307.json  stage7_latent_only_tune_prob_035.json
configs/: minimal.yaml  stage7_content_memory.yaml  stage7_content_memory_v2.yaml  stage7_content_memory_v3.yaml  stage7_content_memory_v3_seed107.yaml  stage7_content_memory_v3_seed207.yaml  stage7_content_memory_v3_seed307.yaml  stage7_longer_wide.yaml  tune_prob_025.yaml  tune_prob_035.yaml  tune_prob_035_rnn.yaml
docs/: AUDIT_OPEN_ISSUES.md  FEEDBACK.md  NEXT_STEPS.md  PREPRINT.md  PRIORITY1_AUDIT_STATUS.md  ROADMAP.md
scripts/: eval_minimal.py  perturbational_multiseed.py  stage4b_emergence.py  stage7_external_llm_audit.py  (+4 more)
(+7 files in other folders)
